# sfml_rpg_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
src/: AssetsEnums.h  Base_InWorld.cpp  Base_InWorld.h  Editor.h  Game.cpp  Game.h  MenuStateSwitcher.cpp  MenuStateSwitcher.h  Okno.h  VFS.cpp  VFS.h  main.cpp
src/GameCore/: Player.cpp  Player.h
src/GameCore/AIScripts/: UnitAI.h
src/GameCore/Entity/: Entity.h  Enveroment.h
src/GameCore/Entity/AnimatedEnv/: Animated.h  Grass.cpp  Grass.h  HGrass.cpp  HGrass.h
src/GameCore/Entity/StaticEnv/: Stone.cpp  Stone.h
src/GameCore/Entity/Unit/: Chel.cpp  Chel.h  Unit.h
src/GameCore/Masters/: AIMaster.h  PhysicMaster.h  Renderer.cpp  Renderer.h
src/LevelManager/: Level.cpp  Level.h  LevelBuilder.cpp  LevelBuilder.h  LevelManager.cpp  LevelManager.h
src/LevelManager/Loaders/: BinLoader.cpp  BinLoader.h  I_LevelLoader.h  TextLoader.cpp  TextLoader.h
src/ProfileManager/: I_ProfileLoader.h  LoaderJSON.cpp  LoaderJSON.h  Prof_preview.h  Profile.h  ProfileManager.h
src/UI/: Button.cpp  Button.h  DynamText.h  GamConsole.cpp  GamConsole.h  UIBoss.cpp  UIBoss.h  ValueSwitcher.h
src/UsageMetr/: Memometr.cpp  Memometr.h  Processmetr.cpp  Processmetr.h  Time.cpp  Time.h
